--- a/Canvas/app/build.gradle
+++ b/Canvas/app/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.facebook.fresco:fresco:0.7.0+'
+    compile 'com.facebook.fresco:imagepipeline-okhttp:0.7.0'
 }
